@@ -48,6 +48,7 @@ etc...
 Improved hexdump menu (called now "Hexadecimal Editor"): now you can edit memory and copy zones of memory
 Improved Cursor Draw program: now you can use kempston mouse. Load cursordr_mouse.tap instead of cursordr.tap
 Improved file converter: tzx to tap, tap to tzx
+Improved TBBlue video display cpu usage: 3% less cpu in my machine, on a compilation without optimization (O2)
 
 Improved menu: 
 * menu windows: now can have more lines than 22, doing scroll
